# Feature-Extraction-Reimagined-Achieving-Superior-Accuracy-in-Camera-Calibration

./: CMakeLists.txt  README.md
Data/result/mult/cost2/: camera_tr_rig.yaml  intrinsics0.yaml  points.yaml  report_camera0_info.txt  rig_tr_global.yaml
Data/result/mult/mult1/: camera_tr_rig.yaml  intrinsics0.yaml  points.yaml  report_camera0_info.txt  rig_tr_global.yaml
Data/result/mult/mult1_opencv/: camera_tr_rig.yaml  intrinsics0.yaml  points.yaml  report_camera0_info.txt  rig_tr_global.yaml
Data/result/mult/mult4_even/: camera_tr_rig.yaml  intrinsics0.yaml  points.yaml  report_camera0_info.txt  rig_tr_global.yaml
Data/result/mult/mult8/: camera_tr_rig.yaml  intrinsics0.yaml  points.yaml  report_camera0_info.txt  rig_tr_global.yaml
Pattern/: resource.txt
Pattern/info/: 16.yaml  8_6.yaml  merge.py
Scripts/: README.md  analytical_calc.nb  data_reshape.py  extract_img.py
Src/: application.h  main.cpp  sym_refine.h
